ggplot2 1.0.1.9xxx
----------------------------------------------------------------

* You can now suppress the appearance of an axis/legend title (and the space
  that would allocated for it) with `NULL` in the `scale_` function. To
  use the default lable, use `waiver()` (#1145).

* `labels = NULL` now works with `guide_legend()` and `guide_colorbar()`.
  (#1175, #1183).

* Improved documentation for `aes()`, `layer()` and many geoms and scales. I've
  tried to reduce the use of `...` so that you can see all the documentation in
  one place rather than having to navigate through multiple pages. Use
  of `qplot()` in examples has been minimised (#1123, @hrbrmstr). Tighly
  linked geoms and stats (e.g. `geom_boxplot()` and `stat_boxplot()`) are
  now documented in the same file so you can see all the arguments in one
  place.

* `geom_abline()`, `geom_hline()` and `geom_vline()` have been rewritten to
  have simpler behaviour and be more consistent:

    * `stat_abline()`, `stat_hline()` and `stat_vline()` have been removed:
      these were never suitable for use other than with `geom_abline()` etc
      and were not documented.

    * `geom_abline()`, `geom_vline()` and `geom_hline()` are bound to
      `stat_identity()` and `position_identity()`

    * Intercept parameters can no longer be set to a function.

    * They are all documented in one file, since they are so closely related.

* Scales no longer round data points to improve performance of colour
  palettes. Instead the scales package now uses a much faster colour
  interpolation algorithm (#1022).

* `scale_x_date()` now clips dates outside the limits in the same way as
  `scale_x_continuous()` (#1090)

* The `stat` and `position` arguments to `qplot()` have been deprecated.

* The movies dataset has been moved into its own package, ggplot2movies,
  because it was large and not terribly useful. If you've used the movies
  dataset, you'll now need to explicitly load the package with